edited some titles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- Head -->
 <head>
 
-<title>Game Robo a Gaming Category Bootstrap Responsive Website Template | Home :: W3layouts</title>
+<title>Welcome To Legacy Roleplay. Your second home</title>
 
 <!-- Meta-Tags -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -155,7 +155,7 @@
 		<div class="container">
 			<div class="w3lsaboutaits-grids">
 				<div class="col-md-6 w3lsaboutaits-grid w3lsaboutaits-grid-1">
-					<h3>Choose from 10000+ Games to Download</h3>
+					<h3>About Legacy Roleplay Nepal/India</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</div>
 				<div class="col-md-6 w3lsaboutaits-grid w3lsaboutaits-grid-2">
