Changed the looks

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- Head -->
 <head>
 
-<title>Welcome To Legacy Roleplay. Your second home</title>
+<title>Legacy Roleplay Nepal/India</title>
 
 <!-- Meta-Tags -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -124,22 +124,42 @@
 				<li class="first-slide w3ls">
 					<img src="images/slide-1.jpg" alt="Game Robo">
 					<div class="heading">
-						<h1>GAME ROBO</h1>
-						<h2>FREE FULL GAMES</h2>
-						<h3>A UNIQUE PLACE TO DOWNLOAD</h3>
+						<h1>Legay Roleplay</h1>
+						<h2>Nepal/India</h2>
+						<h3>Your Second Home</h3>
 					</div>
 				</li>
 				<li class="second-slide aits">
 					<img src="images/slide-2.jpg" alt="Game Robo">
+					<div class="heading">
+						<h1>Legay Roleplay</h1>
+						<h2>Nepal/India</h2>
+						<h3>Your Second Home</h3>
+					</div>
 				</li>
 				<li class="third-slide w3-agileits">
 					<img src="images/slide-3.jpg" alt="Game Robo">
+					<div class="heading">
+						<h1>Legay Roleplay</h1>
+						<h2>Nepal/India</h2>
+						<h3>Your Second Home</h3>
+					</div>
 				</li>
 				<li class="fourth-slide agileinfo">
 					<img src="images/slide-4.jpg" alt="Game Robo">
+					<div class="heading">
+						<h1>Legay Roleplay</h1>
+						<h2>Nepal/India</h2>
+						<h3>Your Second Home</h3>
+					</div>
 				</li>
 				<li class="fifth-slide wthree">
 					<img src="images/slide-5.jpg" alt="Game Robo">
+					<div class="heading">
+						<h1>Legay Roleplay</h1>
+						<h2>Nepal/India</h2>
+						<h3>Your Second Home</h3>
+					</div>
 				</li>
 			</ul>
 		</div>
@@ -156,7 +176,14 @@
 			<div class="w3lsaboutaits-grids">
 				<div class="col-md-6 w3lsaboutaits-grid w3lsaboutaits-grid-1">
 					<h3>About Legacy Roleplay Nepal/India</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>Legacy Roleplay is a collection of different communities (also referred to as subdivisions) based in different parts of the world. Legacy was initially an English community founded in early 2018, though it later branched out and became a more complex organization.
+
+						Due to numerous requests, the opening of a subdivision in Nepal is prominent. Therefore, we're arranging for this to happen.
+						
+						This "subdivision" of Legacy is owned by the main community but is fully managed and controlled by others. We hope this allows for a better and more enjoyable experience for Nepali players, both old and new, and provides a better environment for role-play and growth.
+						
+						The FiveM servers are hosted by the Legacy managers. This discord is also owned by the them but is entirely controlled by RoYaL LuCk. The FiveM server database is not synchronized between any of the other subdivisions.
+						</p>
 				</div>
 				<div class="col-md-6 w3lsaboutaits-grid w3lsaboutaits-grid-2">
 					<img src="images/about.jpg" alt="Game Robo">
