Changed the fonts

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<li class="first-slide w3ls">
 					<img src="images/slide-1.jpg" alt="Game Robo">
 					<div class="heading">
-						<h1>Legay Roleplay</h1>
+						<h1>Legacy Roleplay</h1>
 						<h2>Nepal/India</h2>
 						<h3>Your Second Home</h3>
 					</div>
