--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 				<li class="second-slide aits">
 					<img src="images/slide-2.jpg" alt="Game Robo">
 					<div class="heading">
-						<h1>Legay Roleplay</h1>
+						<h1>Legacy Roleplay</h1>
 						<h2>Nepal/India</h2>
 						<h3>Your Second Home</h3>
 					</div>
@@ -140,7 +140,7 @@
 				<li class="third-slide w3-agileits">
 					<img src="images/slide-3.jpg" alt="Game Robo">
 					<div class="heading">
-						<h1>Legay Roleplay</h1>
+						<h1>Legacy Roleplay</h1>
 						<h2>Nepal/India</h2>
 						<h3>Your Second Home</h3>
 					</div>
@@ -148,7 +148,7 @@
 				<li class="fourth-slide agileinfo">
 					<img src="images/slide-4.jpg" alt="Game Robo">
 					<div class="heading">
-						<h1>Legay Roleplay</h1>
+						<h1>Legacy Roleplay</h1>
 						<h2>Nepal/India</h2>
 						<h3>Your Second Home</h3>
 					</div>
@@ -156,7 +156,7 @@
 				<li class="fifth-slide wthree">
 					<img src="images/slide-5.jpg" alt="Game Robo">
 					<div class="heading">
-						<h1>Legay Roleplay</h1>
+						<h1>Legacy Roleplay</h1>
 						<h2>Nepal/India</h2>
 						<h3>Your Second Home</h3>
 					</div>
