--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<li><a class="scroll" href="#wthreetabsaits">COLLECTION</a></li>
 						<li><a class="scroll" href="#wthreeblogsaits">BLOG</a></li>
 						<li><a class="scroll" href="#w3portfolioaits">PORTFOLIO</a></li>
-						<li><a class="scroll" href="#agilecontactw3ls">CONTACT</a></li>
+						<li><a class="scroll" href="#agilecontactw3ls">RULES</a></li>
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Login<b class="caret"></b></a>
 							<div class="dropdown-menu">
@@ -204,7 +204,7 @@
 					<figure>
 						<img src="images/platform-1.jpg" alt="Game Robo" class="img-responsive">
 						<figcaption>
-							<h4>PC</h4>
+							<h4>EMS</h4>
 							<p><span><img src="images/platform-1-icon.png" alt="Game Robo"></span></p>
 						</figcaption>
 					</figure>
@@ -215,7 +215,7 @@
 					<figure>
 						<img src="images/platform-2.jpg" alt="Game Robo" class="img-responsive">
 						<figcaption>
-							<h4>Playstation</h4>
+							<h4>POLICE</h4>
 							<p><span><img src="images/platform-2-icon.png" alt="Game Robo"></span></p>
 						</figcaption>
 					</figure>
@@ -226,7 +226,7 @@
 					<figure>
 						<img src="images/platform-3.jpg" alt="Game Robo" class="img-responsive">
 						<figcaption>
-							<h4>XBOX</h4>
+							<h4>BURGER SHOT</h4>
 							<p><span><img src="images/platform-3-icon.png" alt="Game Robo"></span></p>
 						</figcaption>
 					</figure>
@@ -237,7 +237,7 @@
 					<figure>
 						<img src="images/platform-4.jpg" alt="Game Robo" class="img-responsive">
 						<figcaption>
-							<h4>WII</h4>
+							<h4>Mechanic</h4>
 							<p><span><img src="images/platform-4-icon.png" alt="Game Robo"></span></p>
 						</figcaption>
 					</figure>
@@ -1430,7 +1430,7 @@
 				<p>Here at Legacy Roleplay, we strive to be unique from other servers and have a high standard of roleplay. Everyone follows the rules, including the staff.</p>
 
 				<p>It is important to understand that even though a rule isn’t specifically written for certain actions, it might still be punishable. However, if you feel like you have been wrongly banned, refer to our ban appeal form located here on our forums.</p>
-
+				<br>
 				<p>BEFORE JOINING THE SERVER, PLEASE ENSURE YOU HAVE READ AND UNDERSTOOD THE RULES. YOU WILL BE HELD ACCOUNTABLE FOR ALL RULE BREAKS REGARDLESS IF YOU ARE AWARE OF THE RULE OR NOT.</p>
 
 			<br>
