--- a/index.html
+++ b/index.html
@@ -253,14 +253,13 @@
 	<!-- Tabs -->
 	<div class="wthreetabsaits" id="wthreetabsaits">
 		<section>
-			<h3>Collection</h3>
+			<h3>OUR Content Creators</h3>
 			<div class="tabs tabs-style-line">
 				<nav class="container">
 					<ul>
-						<li><a href="#section-line-1"><span>POPULAR</span></a></li>
-						<li><a href="#section-line-2"><span>NEW ARRIVALS</span></a></li>
-						<li><a href="#section-line-3"><span>BEST SELLERS</span></a></li>
-						<li><a href="#section-line-4"><span>EDITOR'S PICK</span></a></li>
+						<li><a href="#section-line-1"><span>YOUTUBE</span></a></li>
+						<li><a href="#section-line-2"><span>FACEBOOK</span></a></li>
+						<li><a href="#section-line-3"><span>TWITCH</span></a></li>
 					</ul>
 				</nav>
 				<div class="content-wrap">
@@ -270,8 +269,8 @@
 								<div class="agileinfoitem-image">
 									<img src="images/popular-1.jpg" alt="Game Robo">
 								</div>
-								<h3>Forza Horizon 3</h3>
-								<h4>2 Million+ Downloads</h4>
+								<h3>RoYaL LuCk </h3>
+								<h4>2.71K</h4>
 								<div class="wthreeratingaits">
 									<ul>
 										<li><i class="fa fa-star" aria-hidden="true"></i></li>
@@ -282,7 +281,7 @@
 									</ul>
 								</div>
 								<div class="wthreeitemdownload">
-									<a href="#">Download</a>
+									<a href="https://www.youtube.com/channel/UCJWOa3Om9fOuTa2g5p0-jIg">Subscribe</a>
 								</div>
 							</div>
 							<div class="item">
