--- a/index.html
+++ b/index.html
@@ -1093,32 +1093,32 @@
 	<div class="wthreeblogsaits" id="wthreeblogsaits">
 		<div class="wthreeblogsaits-grids">
 
-			<h3>Latest Blogs & News</h3>
+			<h3>Latest Update News</h3>
 			<div class="col-md-3 wthreeblogsaits-grid wthreeblogsaits-grid-1">
 				<a href="#" data-toggle="modal" data-target="#myModal1"><img src="images/blog-1.jpg" alt="Game Robo"></a>
 				<span class="w3date">10-10-2016</span>
-				<h4><a href="#" data-toggle="modal" data-target="#myModal1">NVIDIA TITAN X</a></h4>
+				<h4><a href="#" data-toggle="modal" data-target="#myModal1">CASINO</a></h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
 				<button class="btn btn-primary" data-toggle="modal" data-target="#myModal1">READ MORE<i class="fa fa-arrow-right" aria-hidden="true"></i></button>
 			</div>
 			<div class="col-md-3 wthreeblogsaits-grid wthreeblogsaits-grid-2">
 				<a href="#" data-toggle="modal" data-target="#myModal2"><img src="images/blog-2.jpg" alt="Game Robo"></a>
 				<span class="w3date">15-10-2016</span>
-				<h4><a href="#" data-toggle="modal" data-target="#myModal2">PS4 VR HEADSET</a></h4>
+				<h4><a href="#" data-toggle="modal" data-target="#myModal2">GOLF</a></h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
 				<button class="btn btn-primary" data-toggle="modal" data-target="#myModal2">READ MORE<i class="fa fa-arrow-right" aria-hidden="true"></i></button>
 			</div>
 			<div class="col-md-3 wthreeblogsaits-grid wthreeblogsaits-grid-3">
 				<a href="#" data-toggle="modal" data-target="#myModal3"><img src="images/blog-3.jpg" alt="Game Robo"></a>
 				<span class="w3date">20-10-2016</span>
-				<h4><a href="#" data-toggle="modal" data-target="#myModal3">ACCESSORIES FOR XBOX</a></h4>
+				<h4><a href="#" data-toggle="modal" data-target="#myModal3">NEW PDM CARS</a></h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
 				<button class="btn btn-primary" data-toggle="modal" data-target="#myModal3">READ MORE<i class="fa fa-arrow-right" aria-hidden="true"></i></button>
 			</div>
 			<div class="col-md-3 wthreeblogsaits-grid wthreeblogsaits-grid-4">
 				<a href="#" data-toggle="modal" data-target="#myModal4"><img src="images/blog-4.jpg" alt="Game Robo"></a>
 				<span class="w3date">25-10-2016</span>
-				<h4><a href="#" data-toggle="modal" data-target="#myModal4">NEW SUPER MARIO BROS!</a></h4>
+				<h4><a href="#" data-toggle="modal" data-target="#myModal4">NEW POLICE CAR</a></h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
 				<button class="btn btn-primary" data-toggle="modal" data-target="#myModal4">READ MORE<i class="fa fa-arrow-right" aria-hidden="true"></i></button>
 			</div>
