--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					<div class="heading">
 						<h1>Legacy Roleplay</h1>
 						<h2>Nepal/India</h2>
-						<h3>Your Second Home</h3>
+						<h3>Join now for a unique experience like never before!</h3>
 					</div>
 				</li>
 				<li class="second-slide aits">
@@ -134,7 +134,7 @@
 					<div class="heading">
 						<h1>Legacy Roleplay</h1>
 						<h2>Nepal/India</h2>
-						<h3>Your Second Home</h3>
+						<h3>Join now for a unique experience like never before!</h3>
 					</div>
 				</li>
 				<li class="third-slide w3-agileits">
@@ -142,7 +142,7 @@
 					<div class="heading">
 						<h1>Legacy Roleplay</h1>
 						<h2>Nepal/India</h2>
-						<h3>Your Second Home</h3>
+						<h3>Join now for a unique experience like never before!</h3>
 					</div>
 				</li>
 				<li class="fourth-slide agileinfo">
@@ -150,7 +150,7 @@
 					<div class="heading">
 						<h1>Legacy Roleplay</h1>
 						<h2>Nepal/India</h2>
-						<h3>Your Second Home</h3>
+						<h3>Join now for a unique experience like never before!</h3>
 					</div>
 				</li>
 				<li class="fifth-slide wthree">
@@ -158,7 +158,7 @@
 					<div class="heading">
 						<h1>Legacy Roleplay</h1>
 						<h2>Nepal/India</h2>
-						<h3>Your Second Home</h3>
+						<h3>Join now for a unique experience like never before!</h3>
 					</div>
 				</li>
 			</ul>
@@ -368,19 +368,19 @@
 								<div class="agileinfoitem-image">
 									<img src="images/popular-4.jpg" alt="Game Robo">
 								</div>
-								<h3>The Division</h3>
-								<h4>874000+ Downloads</h4>
+								<h3>Gorkhali</h3>
+								<h4>500</h4>
 								<div class="wthreeratingaits">
 									<ul>
 										<li><i class="fa fa-star" aria-hidden="true"></i></li>
 										<li><i class="fa fa-star" aria-hidden="true"></i></li>
 										<li><i class="fa fa-star" aria-hidden="true"></i></li>
 										<li><i class="fa fa-star" aria-hidden="true"></i></li>
-										<li><i class="fa fa-star-o" aria-hidden="true"></i></li>
+										<li><i class="fa fa-star" aria-hidden="true"></i></li>
 									</ul>
 								</div>
 								<div class="wthreeitemdownload">
-									<a href="#">Download</a>
+									<a href="https://www.youtube.com/channel/UCLKcJws7QQbTfjwZktJBAdQ">Subscribe</a>
 								</div>
 							</div>
 							<div class="item">
@@ -1198,7 +1198,7 @@
 
 	<!-- Portfolio -->
 	<div class="w3portfolioaits" id="w3portfolioaits">
-	<h3>Portfolio</h3>
+	<h3>Gallery</h3>
 		<div class="w3portfolioaits-items">
 			<div class="col-md-3 w3portfolioaits-item w3portfolioaits-item-1">
 				<a class="example-image-link" href="images/popular-1.jpg" data-lightbox="example-set" data-title="">
