--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 				<div id="navbar" class="navbar-collapse navbar-right collapse">
 					<ul class="nav navbar-nav navbar-right cross-effect" id="cross-effect">
 						<li><a class="scroll" href="#w3lsaboutaits">ABOUT</a></li>
-						<li><a class="scroll" href="#agileinfoplatforms">PLATFORMS</a></li>
+						<li><a class="scroll" href="#agileinfoplatforms">Whitelisted Jobs</a></li>
 						<li><a class="scroll" href="#wthreetabsaits">COLLECTION</a></li>
-						<li><a class="scroll" href="#wthreeblogsaits">BLOG</a></li>
+						<li><a class="scroll" href="#wthreeblogsaits">UPDATES</a></li>
 						<li><a class="scroll" href="#w3portfolioaits">PORTFOLIO</a></li>
 						<li><a class="scroll" href="#agilecontactw3ls">RULES</a></li>
 						<li class="dropdown">
