--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<li><a class="scroll" href="#agileinfoplatforms">Whitelisted Jobs</a></li>
 						<li><a class="scroll" href="#wthreetabsaits">COLLECTION</a></li>
 						<li><a class="scroll" href="#wthreeblogsaits">UPDATES</a></li>
-						<li><a class="scroll" href="#w3portfolioaits">PORTFOLIO</a></li>
+						<li><a class="scroll" href="#w3portfolioaits">GALLERY</a></li>
 						<li><a class="scroll" href="#agilecontactw3ls">RULES</a></li>
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Login<b class="caret"></b></a>
