--- a/index.html
+++ b/index.html
@@ -1458,7 +1458,7 @@
 		<p>4. Criminal Roleplay</p><br>
 			<p> Legacy Roleplay is a community that generally consists of individuals over the age of 18, however, this does not mean you cannot play within our community. We respect and recognize all ages of people that are in our community.</p><br>
 
-			<strong><p>1. Community Rules</p></strong>
+			<p><strong>1. Community Rules</strong></p>
 
 				<p> <strong>(1.1)</strong> Bullying, Harassment, or Targeting is punished with a permanent ban without appeal.</p><br>
 				
@@ -1492,7 +1492,7 @@
 
 				<p><strong>(1.16)</strong> Encouraging or forcing other members of the community to break rules is strictly prohibited and will be punished with a ban. </p><br>
 
-			<strong><p>2. General Rules</p></strong>
+			<p><strong>2. General Rules</strong></p>
 				<p> <strong>(2.1)</strong> Vehicle Deathmatch (also known as VDM) is strictly prohibited. At Legacy Roleplay, we define VDM as the act or effort of intentionally using a vehicle to kill or injure other persons, or, where a player kills another person, without intent, by reckless performance under circumstances where any sane individual would understand that such performance could beyond reasonable doubt result in the death of another person. Examples of VDM include, but are not limited to: intentionally running people over or causing explosions to vehicles in order to kill or injure any person(s), speeding excessively with a car hitting a motorcycle where the rider/passenger dies or causing an explosion to a vehicle in a high traffic area like Legion Square which results in the death of any person(s).
 					An act in which a person uses his vehicle as a weapon in order to protect his own life from any direct or immediate threat, will not be considered VDM. A direct or immediate threat in this section is defined as any individual who actively attempts to take your life at the moment. If a person who attempts to kill you, but falls short of completing the act, tries to flee the scene, he is no longer considered a direct threat to your life.
 					</p><br>
@@ -1534,7 +1534,7 @@
 
 				<p> <strong>(2.20)</strong> While many believe that if they are not “read their rights” they will escape punishment for criminal acts, it is not quite so clear cut. Instead, if one is not read their rights, then any evidence obtained from the suspect prior to being advised of their Miranda Rights may be inadmissible as evidence at trial. but they will still be jailed.</p><br>
 
-				<strong><p>3. Roleplay Rules</p></strong>
+			<p><strong>3. Roleplay Rules</strong></p>
 
 				<p> <strong>(3.1)</strong> Power gaming is strictly prohibited. This is when you aim to maximize progress towards a specific goal, to the exclusion of other considerations such as storytelling (roleplay) and atmosphere</p><br>
 
@@ -1579,71 +1579,17 @@
 	<!-- Footer -->
 	<div class="agilefooterwthree" id="agilefooterwthree">
 		<div class="container">
-
-			<div class="agilefooterwthree-grids">
-				<div class="col-md-3 agilefooterwthree-grid agilefooterwthree-grid1">
-					<h4>INFORMATION</h4>
-					<ul>
-						<li><a href="#">SPECIALS</a></li>
-						<li><a href="#">NEW PRODUCTS</a></li>
-						<li><a href="#">TOP SELLERS</a></li>
-						<li><a href="#">BLOGS</a></li>
-						<li><a href="#">REVIEWS</a></li>
-						<li><a href="#">NEWS</a></li>
-					</ul>
-				</div>
-				<div class="col-md-3 agilefooterwthree-grid agilefooterwthree-grid2">
-					<h4>CATEGORIES</h4>
-					<ul>
-						<li><a href="#">GAME GENRES</a></li>
-						<li><a href="#">PC GAMES</a></li>
-						<li><a href="#">PLAYSTATION GAMES</a></li>
-						<li><a href="#">XBOX GAMES</a></li>
-						<li><a href="#">WII GAMES</a></li>
-						<li><a href="#">ALL GAMES</a></li>
-					</ul>
-				</div>
-				<div class="col-md-3 agilefooterwthree-grid agilefooterwthree-grid3">
-					<h4>MY ACCOUNT</h4>
-					<ul>
-						<li><a href="#">MY ACCOUNT</a></li>
-						<li><a href="#">MY ORDERS</a></li>
-						<li><a href="#">MY DOWNLOADS</a></li>
-						<li><a href="#">EDIT PROFILE</a></li>
-						<li><a href="#">CHANGE PASSWORD</a></li>
-						<li><a href="#">DONATE</a></li>
-					</ul>
-				</div>
-				<div class="col-md-3 agilefooterwthree-grid agilefooterwthree-grid4">
-					<h4>CONTACT</h4>
-					<address>
-						<ul>
-							<li>40019 S.p.A</li>
-							<li>Parma Via Modena</li>
-							<li>Sant'Agata Bolognese</li>
-							<li>BO, Italy</li>
-							<li>+1 (734) 123-4567</li>
-							<li><a class="mail" href="mailto:mail@example.com">info@example.com</a></li>
-						</ul>
-					</address>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-
 			<div class="agilefooterwthreebottom">
 				<div class="col-md-6 agilefooterwthreebottom-grid agilefooterwthreebottom-grid1">
 					<div class="copyright">
-						<p>© 2017 Game Robo. All Rights Reserved | Design by <a href="http://w3layouts.com/" target="=_blank"> W3layouts </a></p>
+						<p>© 2021 RoYaLLuCk. All Rights Reserved | Design by <a href="https://www.instagram.com/_surya_sharma5/" target="=_blank"> RoYaLLuCk</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 agilefooterwthreebottom-grid agilefooterwthreebottom-grid2">
 					<div class="agilesocialwthree">
 						<ul class="social-icons">
-							<li><a href="#" class="facebook w3ls" title="Go to Our Facebook Page"><i class="fa w3ls fa-facebook-square" aria-hidden="true"></i></a></li>
-							<li><a href="#" class="twitter w3l" title="Go to Our Twitter Account"><i class="fa w3l fa-twitter-square" aria-hidden="true"></i></a></li>
-							<li><a href="#" class="googleplus w3" title="Go to Our Google Plus Account"><i class="fa w3 fa-google-plus-square" aria-hidden="true"></i></a></li>
 							<li><a href="#" class="instagram wthree" title="Go to Our Instagram Account"><i class="fa wthree fa-instagram" aria-hidden="true"></i></a></li>
-							<li><a href="#" class="youtube w3layouts" title="Go to Our Youtube Channel"><i class="fa w3layouts fa-youtube-square" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.youtube.com/channel/UC0QqT1TJSlpEaPLZxTUkqgA" class="youtube w3layouts" title="Go to Our Youtube Channel"><i class="fa w3layouts fa-youtube-square" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
 				</div>
